--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-device-info": "^5.5.6",
     "react-native-elements": "^1.2.7",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.6.1",
@@ -27,7 +28,9 @@
     "react-native-side-drawer": "^1.2.5",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
-    "react-navigation-stack": "^2.3.11"
+    "react-navigation-stack": "^2.3.11",
+    "socket.io-client": "^2.1.0",
+    "expo-constants": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
